--- a/GUIClone/MainWindow.xaml
+++ b/GUIClone/MainWindow.xaml
@@ -13,6 +13,7 @@
         <TextBox x:Name="urlGithub" HorizontalAlignment="Left" Height="23" Margin="71,114,0,0" TextWrapping="Wrap" Text="URL du lien github" VerticalAlignment="Top" Width="357" TextChanged="urlGithub_TextChanged"/>
         <Button Content="Cloner" HorizontalAlignment="Left" Margin="353,154,0,0" VerticalAlignment="Top" Width="75" Click="Button_Click"/>
         <Button Height="23" Margin="0,78,62,0" Padding="8,0" HorizontalAlignment="Right" Name="_showDialogButton" VerticalAlignment="Top" IsDefault="True" Click="_showDialogButton_Click">Choisir</Button>
+        <TextBlock x:Name="success" HorizontalAlignment="Left" Margin="71,154,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Height="20" Width="218"/>
 
     </Grid>
 </Window>
